--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "sequelize": "^6.35.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "supertest": "^6.3.3"
   }
 }
